force-app/main/default/objects/Job_Execution__c/Job_Execution__c.object-meta.xml
<CustomObject>
    <description>This object represents a new batch execution.</description>
    <label>Job Execution</label>
    <nameField>
        <displayFormat>JE-{000000000}</displayFormat>
        <label>Job Execution</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>