force-app/main/default/objects/Job_Execution__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>The AsyncApexJob record for the batch Apex job that fired this event.</description>
    <label>AsyncApexJobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>