force-app/main/default/objects/Job_Execution__c/fields/Batch_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Definition_Name__c</fullName>
    <formula>Batch_Definition__r.Batch_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Definition Name</label>
    <type>Text</type>
</CustomField>