force-app/main/default/objects/Job_Execution__c/fields/Batch_Finish__c.field-meta.xml
<CustomField>
    <fullName>Batch_Finish__c</fullName>
    <description>date/time that the batch finished</description>
    <label>Batch Finish</label>
    <type>DateTime</type>
</CustomField>