force-app/main/default/objects/Job_Execution__c/fields/Batch_Start__c.field-meta.xml
<CustomField>
    <fullName>Batch_Start__c</fullName>
    <description>date/time that the batch started</description>
    <label>Batch Start</label>
    <type>DateTime</type>
</CustomField>