force-app/main/default/objects/Job_Execution__c/fields/Is_Scheduled_run__c.field-meta.xml
<CustomField>
    <fullName>Is_Scheduled_run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scheduled run?</label>
    <type>Checkbox</type>
</CustomField>