force-app/main/default/objects/Job_Execution__c/fields/Queried_Records__c.field-meta.xml
<CustomField>
    <fullName>Queried_Records__c</fullName>
    <label>Queried Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>