force-app/main/default/objects/Job_Execution__c/fields/Scheduled_Execution_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Execution_DateTime__c</fullName>
    <description>Time at which the user wants to manually schedule the job (if not now)</description>
    <label>Scheduled Execution DateTime</label>
    <type>DateTime</type>
</CustomField>