force-app/main/default/objects/Job_Execution__c/recordTypes/Defined.recordType-meta.xml
<RecordType>
    <fullName>Defined</fullName>
    <active>true</active>
    <label>Defined</label>
</RecordType>