force-app/main/default/objects/Job_Execution__c/recordTypes/Initial.recordType-meta.xml
<RecordType>
    <fullName>Initial</fullName>
    <active>true</active>
    <label>Initial</label>
</RecordType>