force-app/main/default/objects/Job_Execution__c/listViews/Errors_last_week.listView-meta.xml
<ListView>
    <fullName>Errors_last_week</fullName>
    <columns>NAME</columns>
    <columns>Batch_Definition_Name__c</columns>
    <columns>Batch_Finish__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finished_with_Errors</value>
    </filters>
    <filters>
        <field>Batch_Finish__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:15</value>
    </filters>
    <label>Errors last week</label>
</ListView>