force-app/main/default/objects/Job_Execution__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Batch_Definition_Name__c</columns>
    <columns>Scheduled_Execution_DateTime__c</columns>
    <columns>Batch_Start__c</columns>
    <columns>Batch_Finish__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>